<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quick Sticky Notes</string>
    <string name="app_id">667000283324600</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="loginIntro">Open your sticky notes by logging in Facebook with the button below.</string>
    <string name="searchTitle">Search</string>
    <string name="createNewTitle">New</string>
    <string name="discardTitle">Delete</string>
    <string name="acceptTitle">Accept</string>
    <string name="editTitle">Edit</string>
    <string name="insertPictureTitle">Insert Picture</string>
    <string name="insertContactTitle">Insert Contact</string>
    <string name="insertMapTitle">Insert Map</string>
    <string name="titleTag">Title: </string>
    <string name="contentTag">Notes: </string>
</resources>
